testsuite/tests/indexed-types/should_fail/T9160.stderr

T9160.hs:18:12: error:
    Expecting one more argument to ‘Maybe’
    Expected kind ‘*’, but ‘Maybe’ has kind ‘* -> *’
    In the type ‘Maybe’
    In the type instance declaration for ‘F’
    In the instance declaration for ‘C (a :: *)’
